working on language issue

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -2,7 +2,7 @@
 	"text": {
 		"login_Password": "Passwort",
 		"login_Forgotpassword": "Passwort vergessen?",
-		"login_LOGIN_btn": "LOGIN",
+		"login_LOGIN_btn": "ANMELDUNG",
 		"login_an_account": "noch kein Account?",
 		"login_Registerhere": "Hier registrieren",
 		"reg_content": "reg_content",
@@ -27,7 +27,7 @@
 		"Register_special": "1 Spezialzeichen",
 		"recruitmentemp_content": "recruitment employees",
 		"Aimedis_Staff_Reg": "Aimedis Staff Registrierung",
-		"YOUR_CONTACT_INFO": "YOUR CONTACT INFO",
+		"YOUR_CONTACT_INFO": "DEINE KONTAKTDATEN",
 		"recEmp_Emailaddress": "E-Mail Adresse",
 		"recEmp_FirstName": "Vorname",
 		"recEmp_LastName": "Nachname",
@@ -49,7 +49,7 @@
 		"Aimedis_Staff_Recruitment": "Aimedis Staff Recruitment",
 		"Staff_CONTACT_INFO": "IHRE KONTAKTINFORMATIONEN",
 		"Staff_Company": "Firma",
-		"Staff_INDUSTRY": "YOUR INDUSTRY & STAFF NEEDS",
+		"Staff_INDUSTRY": "IHRE INDUSTRIE & PERSONAL BRAUCHT",
 		"Staff_Indu": "Bereic",
 		"Staff_needs": "Personalbedarf",
 		"Staff_addstaff": "+ add staff",
@@ -61,12 +61,12 @@
 		"profile_info": "Dies sind Ihre Profilinformationen, auf die Ärzte Ihres Vertrauens und diejenigen, mit denen Sie Ihre Profil-ID und PIN teilen, zugreifen können.",
 		"ID": "ID",
 		"speciality": "Fachbereich",
-		"pin": "PIN",
+		"pin": "STIFT",
 		"done": "Erledigt",
 		"browse": "Durchsuchen",
 		"or_drag_here": "oder hier hinziehen",
 		"suported_file_type": "Unterstützte Dateitypen",
-		"QR_code": "QR Code",
+		"QR_code": "QR-Code",
 		"Change": "Ändern",
 		"visibility": "Sichtbarkeit",
 		"edit_id_pin": "Sie können Ihre ID und/oder Ihre PIN so oft ändern, wie Sie es wünschen.",
@@ -97,7 +97,7 @@
 		"mobile": "mobil",
 		"Languages": "Sprachen",
 		"Language": "Sprache",
-		"dark_mode": "Dark mode",
+		"dark_mode": "Dunkler Modus",
 		"spoken": "gesprochen",
 		"insurance": "Versicherung",
 		"add_more": "Mehr hinzufügen",
@@ -159,7 +159,7 @@
 		"specify00000_kind_of_right_management": "Bitte spezifizieren Sie, welchen Rechtemanagementtyp Sie bevorzugen.",
 		"automatically_hidden_content": "Ein neuer Eintrag wird Ärzten und Pflegepersonal bei einem regulären Profilzugriffs (PIN & ID) automatisch ausgeblendet und muss von mir manuell SICHTBAR gemacht werden (IMMER ANZEIGEN oder BIS ZU EINEM BESTIMMTEN DATUM ANZEIGEN).",
 		"automatically_visible_content": "Ein neuer Eintrag ist für Ärzte und Pflegepersonal im Falle eines regulären Profilzugriffs (PIN & ID) automatisch SICHTBAR und muss von mir manuell UNSICHTBAR gemacht werden (IMMER AUSBLENDEN oder BIS ZU EINEM BESTIMMTEN DATUM AUSBLENDEN).",
-		"Opt_Out": "Opt-Out",
+		"Opt_Out": "Optischer Ausgang",
 		"Opt_In": "Opt-In",
 		"apply_right_management_for_all_items": "Eine Rechtemanagement-Einstellung für ALLE Einträge festlegen.",
 		"plz_mention_date_time": "Bitte legen Sie ein Datum fest",
@@ -217,7 +217,7 @@
 		"do_u_hv_allergies": "Haben Sie Allergien",
 		"ur_profession": "Ihr Beruf",
 		"Annotations": "Anmerkungen",
-		"details": "Details",
+		"details": "Einzelheiten",
 		"questions": "Fragen",
 		"is_this_follow_pres": "Ist dies ein Folgerezept",
 		"how_u_like_rcv_pres": "In welcher Form möchten Sie das Rezept erhalten",
@@ -262,7 +262,7 @@
 		"services": "Dienstleistungen",
 		"search_for_device_palce": "Nach Gerät oder Service suchen...",
 		"view_details": "Details ansehen",
-		"Details": "Details",
+		"Details": "Einzelheiten",
 		"Questions": "Fragen",
 		"book": "Buchen",
 		"logout": "Abmelden",
@@ -319,7 +319,7 @@
 		"specialist": "Spezialist",
 		"previous": "Vorherig(e,s)",
 		"next": "Nächste(s,r)",
-		"journal": "Journal",
+		"journal": "Tagebuch",
 		"vdo_calls": "Videogespräche",
 		"add_new_entry": "Neuen Eintrag hinzufügen",
 		"entry": "Eintrag",
@@ -328,7 +328,7 @@
 		"blood_sugar": "Blutzucker",
 		"condition_pain": "Befinden und Schmerzen",
 		"covid_diary": "Covid-19 Tagebuch",
-		"diagnosis": "Diagnose",
+		"diagnosis": "Diagnostizieren",
 		"travel": "Reise",
 		"traveled": "Reise",
 		"diary": "Tagebuch",
@@ -338,7 +338,7 @@
 		"file_uplod": "Dateiupload",
 		"hosp_visit": "Klinikaufenthalt",
 		"lab_result": "Laborergebnis",
-		"marcumar_pass": "Marcumarpass",
+		"marcumar_pass": "Marcumar Pass",
 		"medication": "Medikation",
 		"smoking_status": "Raucherstatus",
 		"vaccination": "Impfung",
@@ -356,7 +356,7 @@
 		"feeling": "Gefühl",
 		"RR_diastolic": "RR diastolisch",
 		"view_fullscren": "Im Vollbild ansehen",
-		"situation": "Situation",
+		"situation": "Lage",
 		"selct_pain_area": "Bitte Schmerzpunkte defininieren",
 		"pain_areas": "Schmerzpunkte",
 		"temparture": "Tempartur",
@@ -366,9 +366,9 @@
 		"pain_quality": "Schmerzqualität",
 		"slct_ICD_serch_code": "Bitte ICD Katalog auswählen und Code wählen",
 		"enter_code_serch_by_keyword": "Code eingeben oder nach Schlüsselbegriff suchen",
-		"dignose": "Diagnose",
-		"review": "Review",
-		"by": "by",
+		"dignose": "Diagnostizieren",
+		"review": "Rezension",
+		"by": "durch",
 		"emergency": "Notfall",
 		"diagnosed": "Diagnostiziert",
 		"allergy": "Allergie",
@@ -382,7 +382,7 @@
 		"journal_entry": "Journaleintrag",
 		"example": "Beispiel",
 		"mild_depresive_episode": "Leichte depressive Episode",
-		"team": "Team",
+		"team": "Mannschaft",
 		"example_entry_of_journal_timline_etc": "Dies ist ein Beispieleintrag in Ihrem Gesundheitsjournal. Alle Einträge wie 'Diagnosen', 'Arztbesuche', 'Laborergebnisse' und mehr werden hier angezeigt.",
 		"date_of_dieses_patient": "Datum des Erkrankungsbeginns (Patient)",
 		"date_of_death": "Datum des Todes (falls zutreffend)",
@@ -411,7 +411,7 @@
 		"lab_parameter": "Laborparameter",
 		"value": "Wert",
 		"enter_a_sbstnce": "Geben Sie eine Substanz ein",
-		"atc_code": "ATC Code",
+		"atc_code": "ATC-Code",
 		"ur_trade_name": "Handelsname",
 		"enter_dosage": "Dosis eingeben",
 		"prescribed": "Verschrieben",
@@ -428,7 +428,7 @@
 		"quik_value": "Quickwert",
 		"INR": "INR",
 		"pill_taken": "eingenommene Tabletten",
-		"marcumer_pass": "Marcumarpass",
+		"marcumer_pass": "Marcumar Pass",
 		"prsnalize_a_dashbord_drag_recorder": "Personalisieren Sie Ihr Dashboard, indem Sie Karten hinzufügen oder entfernen. Ziehen zum Neuanordnen.",
 		"add_more_cards": "Mehr Karten hinzufügen",
 		"depression": "Depression",
@@ -502,7 +502,7 @@
 		"add_to_cart": "Zu Warenkorb hinzufügen",
 		"here_u_see_diabetes": "Hier sehen Sie, was Diabetes ist, wie es zu Diabetes kommt und warum eine gute Behandlung so wichtig ist.",
 		"new_entry": "Neuer Eintrag",
-		"home_add_mailbox": "Home address mailbox",
+		"home_add_mailbox": "Postfach für Privatadresse",
 		"cancel_details": "Cancel details",
 		"new_rqst": "New Requests",
 		"time_slot_alredy_booke_calender": "Das Zeitfenster ist bereits in Ihrem Kalender gebucht",
@@ -619,10 +619,10 @@
 		"Pharmacist" : "Apothekerin",
 		"Professional" : "Fachfrau",
 		"Appointmentiscanceled" : "Termin wird abgesagt",
-		"DetailsQuestions" :"Details / Fragen",
+		"DetailsQuestions" :"Einzelheiten / Fragen",
 		"Timezone" : "Zeitzone",
 		"YesIherewithagreewitha" : "Ja, ich stimme hiermit einer Transplantation eines oder mehrerer meiner Organe / Gewebe zu, nachdem Ärzte mich für tot erklärt haben",
-		"followingorgantissues:" :"Ja, ich erlaube dies mit Ausnahme der folgenden Organe / Gewebe",
+		"followingorgantissues" :"Ja, ich erlaube dies mit Ausnahme der folgenden Organe / Gewebe",
 		"allowthisonlyforfollowing" : "Ja, ich erlaube dies nur für folgende Organe / Gewebe:",
 		"Yes" : "Ja",
 		"No" : "Nein",
@@ -705,7 +705,7 @@
         "no_pain":"Kein Schmerz",
 		"condition_h_r_u":"Befinden (Wie geht es Ihnen?)",
 		"how_are_you":"Wie geht es Ihnen?",
-		"Enter_Diagnosis" : "Diagnose eingeben",
+		"Enter_Diagnosis" : "Geben Sie Diagnose ein",
 		"Problem":"Problem",
 		"select_dates":"Daten wählen",
         "hurts_a_lot":"Schmerzt sehr",
@@ -770,8 +770,8 @@
 		"appVersion":"App Version 3.0",
 		"aimedisInc":"Aimedis B.V.",
 		"do_want_disconn":"Möchten Sie die Verbindung unterbrechen",
-		"tracker_data":"Tracker & IoT Daten",
-		"tracker_devices":"Tracker & IoT-Geräte",
+		"tracker_data":"Tracker und IoT Daten",
+		"tracker_devices":"Tracker und Geräte",
 		"connected":"Verbunden",
 		"times": "Zeiten",
 		"last_on":"Zuletzt am",
@@ -1033,6 +1033,13 @@
 		"search_by_patient_id_name_doc":"Suche nach Patienten-ID, Patientenname, Arzt ...",
 		"rcvd_from_doctor":"Vom Arzt erhalten",
 		"handled":"Abgewickelt",
-		"medicine_handed_to_patient":"Medizin an Patienten übergeben"
+		"medicine_handed_to_patient":"Medizin an Patienten übergeben",
+		"img_files":"Bilder & Dateien",
+		"Explanation":"Erläuterung",
+		"r_u_sure_remove_doctor":"Sind Sie sicher, dass Sie den Arzt aus dem vertrauenswürdigen Arzt entfernen?",
+		"paymnt_processed":"Zahlung erfolgreich verarbeitet",
+		"paymnt_err":"Hitilafu ya malipo",
+		"pay_with_stripe":"Bezahlen mit Stripe",
+		"frequency":"Frequenz"
 	}
 }
