--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -620,7 +620,7 @@
 		"DetailsQuestions" :"Детали / Вопросы",
 		"Timezone" : "Часовой пояс",
 		"YesIherewithagreewitha" : "Да, настоящим я согласен на трансплантацию одного или нескольких моих органов / тканей после того, как врачи объявят меня мертвым.",
-		"followingorgantissues:" :"Да, я разрешаю это, за исключением следующих органов / тканей:",
+		"followingorgantissues" :"Да, я разрешаю это, за исключением следующих органов / тканей:",
 		"allowthisonlyforfollowing" : "Да, я разрешаю это только для следующих органов / тканей:",
 		"Yes" : "да",
 		"No" : "Нет",
@@ -1032,6 +1032,13 @@
     "search_by_patient_id_name_doc":"Поиск по идентификатору пациента, имени пациента, врачу ...",
     "rcvd_from_doctor":"Получено от врача",
     "handled":"Обработано",
-    "medicine_handed_to_patient":"Лекарство передано пациенту"
+    "medicine_handed_to_patient":"Лекарство передано пациенту",
+    "img_files":"Изображения и файлы",
+    "Explanation":"Объяснение",
+    "r_u_sure_remove_doctor":"Вы уверены, что удалите Доктора из доверенного доктора?",
+    "paymnt_processed":"Платеж успешно обработан",
+    "paymnt_err":"Ошибка оплаты",
+    "pay_with_stripe":"Оплатить с Stripe",
+    "frequency":"Частота"
   }
 }
