new hover functionality, and item removed sentence

--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -976,7 +976,7 @@
 		"emegancy_access": "紧急通道",
 		"invite_doc": "邀请医生",
 		"pharmacy_access": "药房访问",
-		"cart_removed": "购物车已成功移除",
+		"cart_removed": "项目已成功删除",
 		"pay_with": "使用。。。支付",
 		"full_report": "完整报告",
 		"item_added_to_wishlist": "商品已成功添加到愿望清单",
