--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -980,7 +980,7 @@
 		"emegancy_access":"Notfallzugang",
 		"invite_doc":"Ärzte einladen",
 		"pharmacy_access":"Apothekenzugang",
-		"cart_removed":"Warenkorb erfolgreich entfernt",
+		"cart_removed":"Gegenstand erfolgreich entfernt",
 		"pay_with":"Bezahlen mit",
 		"full_report":"Kompletter Bericht",
 		"item_added_to_wishlist":"Artikel erfolgreich zur Wunschliste hinzugefügt",
