--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -1489,7 +1489,7 @@
 		"emegancy_access":"Toegang voor noodgevallen",
 		"invite_doc":"Nodig artsen uit",
 		"pharmacy_access":"Apotheek Toegang",
-		"cart_removed":"Winkelwagen succesvol verwijderd",
+		"cart_removed":"Item succesvol verwijderd",
 		"pay_with":"Betaal met",
 		"full_report":"Volledig rapport",
 		"item_added_to_wishlist":"Item succesvol toegevoegd aan verlanglijst",
