--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -981,7 +981,7 @@
 		"emegancy_access":"Acesso de Emergência",
 		"invite_doc":"Convide Médicos",
 		"pharmacy_access":"Acesso à Farmácia",
-		"cart_removed":"Carrinho removido com sucesso",
+		"cart_removed":"Item removido com sucesso",
 		"pay_with":"Pagar com",
 		"full_report":"rapportRelatório completo",
 		"item_added_to_wishlist":"Item adicionado com sucesso à lista de desejos",
