--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -979,7 +979,7 @@
     "emegancy_access":"Аварийный доступ",
     "invite_doc":"Пригласить врачей",
     "pharmacy_access":"Доступ в аптеку",
-    "cart_removed":"Корзина успешно удалена",
+    "cart_removed":"Товар удален успешно",
     "pay_with":"Оплатить с",
     "full_report":"Полный отчет",
     "item_added_to_wishlist":"Товар успешно добавлен в список желаний",
