--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -980,7 +980,7 @@
 		"emegancy_access":"Acceso de emergencia",
 		"invite_doc":"Invitar Doctores",
 		"pharmacy_access":"Acceso a la farmacia",
-		"cart_removed":"Carrito eliminado correctamente",
+		"cart_removed":"Elemento eliminado correctamente",
 		"pay_with":"Pagar con",
 		"full_report":"Reporte completo",
 		"item_added_to_wishlist":"Artículo agregado exitosamente a la lista de deseos",
