--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -975,7 +975,7 @@
 		"emegancy_access": "Upataji wa Dharura",
 		"invite_doc": "Alika Madaktari",
 		"pharmacy_access": "Ufikiaji wa Dawa",
-		"cart_removed": "Kikapu kimeondolewa kwa mafanikio",
+		"cart_removed": "Kipengee kimeondolewa",
 		"pay_with": "Lipa na",
 		"full_report": "Ripoti Kamili",
 		"item_added_to_wishlist": "Kipengee kimeongezwa kwenye orodha ya matamanio",
