--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -979,7 +979,7 @@
 		"emegancy_access":"Emergency Access",
 		"invite_doc":"Invite Doctors",
 		"pharmacy_access":"Pharmacy Access",
-		"cart_removed":"Cart removed successfully",
+		"cart_removed":"Item removed successfully",
 		"pay_with":"Pay with",
 		"full_report":"Full Report",
 		"item_added_to_wishlist":"Item successfully added to wishlist",
