--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -1553,6 +1553,22 @@
 		"stressed":"Benadrukt",
 		"plz_fill_mob_number":"Vul het mobiele nummer in",
 		"pswd_not_valid":"Wachtwoord is niet geldig",
-		"plz_fill_fullname_user":"Vul de volledige naam van de gebruiker in"
+		"plz_fill_fullname_user":"Vul de volledige naam van de gebruiker in",
+		"plz_enter_email_id_patient":"Voer het e-mailadres of ID van de patiënt in",
+		"unknown":"Onbekend",
+		"there_r_the":"Er zijn de",
+		"plz_check_unread_message_in_chat":"ongelezen berichten in Chat. Kunt u dit nakijken.",
+		"new_message_in_chat_plz_check":"Nieuwe bericht (en) in chatmodule. Ga naar CHAT (link) om uw berichten te controleren.",
+		"remove_inquiry":"Vraag verwijderen?",
+
+		"archive_item":"Item archiveren",
+		"do_u_really_want_archive_item":"Wil je het item echt archiveren?",
+		"delete_item":"Verwijder item",
+		"do_u_really_want_delete_item":"Wil je het item echt verwijderen?",
+		"plz_upload_png_jpeg":"Upload een PNG- en JPEG-bestand",
+		"r_u_sure_want_book_appointment":"Weet u zeker dat u deze afspraak wilt boeken?",
+		"r_u_sure_remove_patient":"Weet u zeker dat u de patiënt verwijdert?",
+		"cancel_inquiry":"De aanvraag annuleren?",
+		"r_u_sure_cancel_inquiry":"Weet u zeker dat u deze aanvraag wilt annuleren?"
 		}
 }
